[package]
name = "skf_plc_mqtt_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
chrono = "0.4.38"
dotenv = "0.15.0"
fern = "0.6.2"
log = "0.4.22"
rumqttc = "0.24.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
